# ADVECT

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  cmems_parcels.py  download_cmems_reanalysis_north_pacific.py  environment.yml  setup.cfg  snapshot_ECCO_currents.py
.github/workflows/: auto_black.yml  black_linter.yml  blacken.yml  check_black.yml  check_black_format.yml  unittests.yaml
ADVECTOR/: __init__.py  run_advector_2D.py  run_advector_3D.py
ADVECTOR/drivers/: advection_chunking.py  chunked_kernel_driver.py
ADVECTOR/enums/: forcings.py
ADVECTOR/examples/: ECCO_advect_2D.py  ECCO_advect_3D.py  download_example_data.py
ADVECTOR/io_tools/: OutputWriter.py  open_configfiles.py  open_vectorfiles.py
ADVECTOR/kernel_wrappers/: Field3D.py  Kernel.py  Kernel2D.py  Kernel3D.py
ADVECTOR/model_core/: fields.cl  geography.h  wind_driven_mixing.cl  wind_mixing_and_buoyancy.cl
ADVECTOR/plotting/: plot_3d_trajectories.py  plot_advection.py
INTEGRATOR/: README.md  generate_ECCO_W.py  generate_HYCOM_W.py  integrator.py  seawater_density_profile.nc
INTEGRATOR/examples/: model_comparison.py
documentation/: configfile_specifications.md
examples/: ECCO_advect_2D.py  ECCO_advect_3D.py  HYCOM_advect_2D.py  README.md  README.txt  download_example_data.py
examples/ECCO/: ECCO_advect_2D.py  create_bathymetry.py  download_ECCO.py  download_ECCO_currents.py  download_ECCO_grid.py  download_and_process_ECCO.py  download_and_process_ECCO_currents.py  download_and_process_ECCO_data.py  download_and_process_density.py  download_currents.py  download_density.py  download_grid.py  get_ECCO_credentials.py  interp_ECCO_to_latlon.py  process_currents.py  process_density.py  snapshot_ECCO_currents.py
examples/HYCOM/: HYCOM_advect_2D.py  README.txt  download_hycom_currents.py  download_merra2_wind.sh  fix_trashtracker_hycom.sh
examples/HYCOM_currents/: download_hycom_currents.py
forcing_data/: cmems_calculate_W.py  download_ECCO.py  interp_ECCO_to_latlon.py  snapshot_ECCO_currents.py
resources/: fetch_etopo1.py
src/: ECCO_advect_2D.py  HYCOM_advect_2D.py  _version.py  chunking.py  config_specifications.md  data_specifications.md  forcing_data_specifications.md  opencl_driver_2D.py  outputfile_specifications.md  plot_advection.py  preprocessors.py  run_advector.py  run_advector_2D.py  run_advector_3D.py  sourcefile_specifications.md
src/enums/: forcings.py  (+1 more)
tests/: circular_streamlines.py  config.py  run_tests.py
w_integrator/: generate_ECCO_W.py  generate_HYCOM_W.py  integrator.py  w_integration_methodology.ipynb
(+149 files in other folders)
