[metadata]
name = ADVECTOR
version = 1.0.0
author = Doug Klink
author_email = dougdklink3@gmail.com
description = A computationally efficient and massively parallel marine litter transport model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TheOceanCleanupAlgorithms/ADVECTOR
classifiers =
    Programming Language :: Python :: 3
    License :: none :: none
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.9
setup_requires =
    numpy
    geos
install_requires =
    pandas
    dask
    xarray
    wget
    netcdf4
    pyopencl
    matplotlib
    tqdm
    ecco_v4_py
    pytest
