[metadata]
name = ADVECTOR
version = 1.0.0
author = Doug Klink
author_email = dougdklink3@gmail.com
description = A computationally efficient and massively parallel marine litter transport model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TheOceanCleanupAlgorithms/ADVECTOR
classifiers =
    Programming Language :: Python :: 3
    License :: none :: none
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = .
packages = find:
python_requires = >=3.9
install_requires =
    numpy
    pandas
    scipy
    dask
    xarray
    wget
    netcdf4
    pyopencl
    matplotlib
    tqdm
    pytest

[options.package_data]
* = *.cl, *.h
